// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Toast API 1`] = `
.c2 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #00A1DE;
  background-color: rgba(0,161,222,0.1);
}

.c0 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
  border: 1px solid #00A1DE;
  background-color: rgba(255,255,255,0.9);
}

.dUUMVe > *:nth-child(2) .c1 {
  margin-top: 5px;
}

.pYtWd > .c1 {
  margin-top: 5px;
}

.sQyKx > .c1 {
  margin-top: 5px;
}

<div
  className="c0"
  kind="primary"
>
  <p
    className="c1 c2"
    kind="primary"
  >
    Success! You have delete the item.
  </p>
</div>
`;

exports[`Storyshots Toast With kind props 1`] = `
.c5 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #00A1DE;
  background-color: rgba(0,161,222,0.1);
}

.c3 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #999A94;
  background-color: rgba(250,250,250,0.1);
}

.c7 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #69BE28;
  background-color: rgba(105,190,40,0.1);
}

.c9 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #F5364E;
  background-color: rgba(245,54,78,0.1);
}

.c11 {
  margin: 0;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 10px 20px;
  color: #F39A1E;
  background-color: rgba(243,154,30,0.1);
}

.c4 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
  border: 1px solid #00A1DE;
  background-color: rgba(255,255,255,0.9);
}

.c1 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
  border: 1px solid #999A94;
  background-color: rgba(255,255,255,0.9);
}

.c6 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
  border: 1px solid #69BE28;
  background-color: rgba(255,255,255,0.9);
}

.c8 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
  border: 1px solid #F5364E;
  background-color: rgba(255,255,255,0.9);
}

.c10 {
  box-sizing: border-box;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
  border-radius: 3px;
  background-color: #FFFFFF;
  overflow: hidden;
  border: 1px solid #F39A1E;
  background-color: rgba(255,255,255,0.9);
}

.dUUMVe > *:nth-child(2) .c2 {
  margin-top: 5px;
}

.pYtWd > .c2 {
  margin-top: 5px;
}

.sQyKx > .c2 {
  margin-top: 5px;
}

.c0 > * {
  margin-bottom: 16px;
}

<div
  className="c0"
>
  <div
    className="c1"
    kind="default"
  >
    <div
      className="c2 c3"
      kind="default"
    >
      default
       - You have delete the item.
    </div>
  </div>
  <div
    className="c4"
    kind="primary"
  >
    <div
      className="c2 c5"
      kind="primary"
    >
      primary
       - You have delete the item.
    </div>
  </div>
  <div
    className="c6"
    kind="success"
  >
    <div
      className="c2 c7"
      kind="success"
    >
      success
       - You have delete the item.
    </div>
  </div>
  <div
    className="c8"
    kind="error"
  >
    <div
      className="c2 c9"
      kind="error"
    >
      error
       - You have delete the item.
    </div>
  </div>
  <div
    className="c10"
    kind="warning"
  >
    <div
      className="c2 c11"
      kind="warning"
    >
      warning
       - You have delete the item.
    </div>
  </div>
</div>
`;
